--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,13 @@ jobs:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
-        
+      
+      - store_test_results:
+          path: target/surefire-reports
+      
       # run tests!
       - run: mvn install
+      
+      #- store_artifacts:
+      #    path: target
 
