--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
     environment:
       # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx1024m
+      MAVEN_OPTS: -Xmx1024m -XX:MaxPermSize=256m
     
     steps:
       - checkout
