--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/openjdk:8u171-jdk
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -18,7 +18,7 @@ jobs:
 
     environment:
       # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx1024m -XX:MaxPermSize=256m
+      MAVEN_OPTS: -Xmx320m 
     
     steps:
       - checkout
@@ -31,9 +31,7 @@ jobs:
           - v1-dependencies-
 
       - run: mvn dependency:go-offline
-      
-      - run: mvn de.qaware.maven:go-offline-maven-plugin:1.0.0:resolve-dependencies -Dmaven.repo.local=.m2/repository
-           
+          
       - save_cache:
           paths:
             - ~/.m2
