circleci store artifcats

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ jobs:
       - store_test_results:
           path: target/surefire-reports
       
-      #- store_artifacts:
-      #    path: target
+      - store_artifacts:
+          path: target/*.jar
 
