--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,5 +44,5 @@ jobs:
           path: target/surefire-reports
       
       - store_artifacts:
-          path: target/*.jar
+          path: target/ci-test-0.0.1-SNAPSHOT.jar
 
